--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ padding: 0.5rem;
 /* #endregion Utilities */
 
 /* #region app_header */
-.nav {
+nav {
     display: flex;
     justify-content: center;
     background-color: var(--nav-bg);
